syntax = "proto3";

package article.v1;

option go_package = "github.com/xiao1203/go-onion-grpc-template/gen/article/v1;articlev1";

service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {}
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse) {}
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse) {}
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse) {}
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse) {}
}

message Article {
  int64 id = 1;
  string name = 2;
  string content = 3;
}
message CreateArticleRequest {
  string name = 1;
  string content = 2;
}
message CreateArticleResponse { Article article = 1; }

message GetArticleRequest { int64 id = 1; }
message GetArticleResponse { Article article = 1; }

message ListArticlesRequest {}
message ListArticlesResponse { repeated Article articles = 1; }

message UpdateArticleRequest {
  int64 id = 1;
  string name = 2;
  string content = 3;
}
message UpdateArticleResponse { Article article = 1; }

message DeleteArticleRequest { int64 id = 1; }
message DeleteArticleResponse {}
